fixed checkbox align and finished readme

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,3 +73,18 @@ h1 {
   margin-top: 15px;
   margin-bottom: 20px;
 }
+
+.checksearch {
+  float right;
+  margin-left: 22px;
+}
+
+.checkfavorite {
+  float left;
+  margin-right: 20px;
+}
+
+#selfav {
+  text-align: right;
+  margin-left: 10px;
+}
